--- a/themes/solar_v2/assets/css/style.scss
+++ b/themes/solar_v2/assets/css/style.scss
@@ -296,7 +296,7 @@ nav {
         }
     }
     .category {
-        margin: 0;
+        margin: 0 3;
         display: inline-block;
     }
     .icon {
