--- a/themes/solar_v2/assets/css/style.scss
+++ b/themes/solar_v2/assets/css/style.scss
@@ -297,7 +297,7 @@ nav {
     }
     .category {
         margin: 0 3;
-	margin-right: var(--pad-small);
+	padding-right: var(--pad-small);
         display: inline-block;
     }
     .icon {
