--- a/themes/solar_v2/assets/css/style.scss
+++ b/themes/solar_v2/assets/css/style.scss
@@ -289,6 +289,7 @@ nav {
             display: inline-block;
             &::before {
                 content: " | ";
+		padding:0 10px;
             }
             &:first-child::before, &:last-child::before{
                 content: "";
