--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 /*
 	Theme Name: Solar
-	Theme URI: 
+	Theme URI:
 	Description: Solar is a Hugo theme designed for https://solar.lowtechmagazine.com. It is an attempt to radically reduce the energy use the associated with accessing our content.
 	Version: 2.0
 	Author: Marie Otsuka, Roel Roscam Abbing
@@ -215,11 +215,12 @@ nav {
   nav#menu > ul li {
     display: inline-block; }
     nav#menu > ul li::before {
-      content: " | "; }
+      content: "  | ";
+      margin: auto; }
     nav#menu > ul li:first-child::before, nav#menu > ul li:last-child::before {
       content: ""; }
   nav .category {
-    margin: 0;
+    margin: 0 3;
     display: inline-block; }
   nav .icon {
     top: 4px; }
