add nbsp in scss

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -215,7 +215,7 @@ nav {
   nav#menu > ul li {
     display: inline-block; }
     nav#menu > ul li::before {
-      content: "  | ";
+      content: "\00a0  | ";
       margin: auto; }
     nav#menu > ul li:first-child::before, nav#menu > ul li:last-child::before {
       content: ""; }
