--- a/themes/solar_v2/assets/css/style.scss
+++ b/themes/solar_v2/assets/css/style.scss
@@ -275,7 +275,7 @@ li.obsolete-technology .category,
 /*-----------
 NAVIGATION
 -----------*/
- 
+
 #menu-s>span {
     display: none;
 }
@@ -288,7 +288,7 @@ nav {
         li {
             display: inline-block;
             &::before {
-                content: "\00a0|\00a0";
+                content: "  | ";
                 margin: auto;
             }
             &:first-child::before, &:last-child::before{
